Closed Bug 1810666 Opened 3 years ago Closed 3 years ago

Verify we cannot end up re-using a content process that was NotifiedImpendingShutdown

Categories

(Core :: DOM: Content Processes, defect, P2)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: jstutte, Assigned: jstutte)

References

Details

Attachments

(2 files)

From bug 1809134 comment 10:

Failure log: Assertion failure: !mIsSignaledImpendingShutdown, at /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1988

Failure log mochitest

it seems we have a logical error in our book-keeping that makes us try to reuse a pre-allocated process that has already received SignalImpendingShutdownToContentJS.

This bug should:

  • land the assert separately
  • fix the already spotted edge case

It seems we have two options here:

For symmetry I'd prefer the first, but I'll need to check for fallout (MarkAsDead does some more things, in particular on Android it directly kills the process).

Severity: -- → S3
Priority: -- → P2
Assignee: nobody → jstutte
Status: NEW → ASSIGNED
Attachment #9312552 - Attachment description: Bug 1810666 - MarkAsDead already on AppShutdownConfirmed. r?smaug → Bug 1810666 - Prevent processes from being re-used after IsSignaledImpendingShutdown r?smaug
Pushed by jstutte@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e9c352e30973 Add an assertion that we won't try to re-use a content process that already received SignalImpendingShutdownToContentJS. r=smaug https://hg.mozilla.org/integration/autoland/rev/1e06f09456f7 Prevent processes from being re-used after IsSignaledImpendingShutdown r=smaug
Blocks: 1811195
Regressions: 1811237
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Regressions: 1813391
Regressions: 1814603
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: