Bug 1810666 - Add an assertion that we won't try to re-use a content process that already received SignalImpendingShutdownToContentJS. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D166991